group 'src.ru.ifmo'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'ru.ifmo.rogue_like.Main'
sourceSets.main.java.srcDirs = ['src']

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
